[UPDATE] 1.profile.html : 팔로워/팔로잉 목록 화면 추가 2.main.css 변경

--- a/views/layout.html
+++ b/views/layout.html
@@ -26,7 +26,7 @@
           <br>
           <div class="menuContainer"><a href="/">Q&A</a></div><br>
           {% if user and user.id %}
-          <div class="menuContainer"><a href="/follow" class="">follow</a></div><br>
+          <div class="menuContainer"><a href="" class="">follow</a></div><br>
           <div class="menuContainer"><a href="/profile">Profile</a></div>
           {% endif %}
         </div>
