--- a/views/main.html
+++ b/views/main.html
@@ -4,8 +4,8 @@
 <div class="timeline">
   <h1>Q&A</h1>
   <div class="twits">
-    <form id="hashtag-form" action="/hashtag">
-      <input type="text" name="hashtag" placeholder="게시물 검색">
+    <form id="search-form" action="/search">
+      <input type="text" name="item" placeholder="게시물 검색">
       <button class="btn">검색</button><br>
       <a class="btn" href="insert">글쓰기</a>
     </form>
@@ -26,17 +26,24 @@
     <div class="twit">
       <a href="post/{{post.id}}/detail">
       <input type="hidden" value="{{post.User.id}}" class="twit-user-id">
-
       <div class="post-profile">
         <div class="profile-section">
-          <img class="pic" src="/static/profile.jpg">
-          <p>{{post.UserId}}</p>
+          <div>
+            <img class="pic" src="/static/profile.jpg">
+          </div>
+          <div>
+            <p>{{post.UserId}}</p>
+            <p>{{post.createdAt.toLocaleString('ko-KR')}}</p>
+          </div>
         </div>
       </div>
-      <div class="twit-author">#{{post.id}}</div>
-      <div class="twit-content">{{post.post_title}}</div>
-      
-      
+      <div class="post-info">
+        <div class="twit-author">#{{post.id}}</div>
+        <div class="twit-tags">
+          <div class="hashtag-item">test1</div>
+        </div>
+        <div class="twit-content">{{post.post_title}}</div>
+      </div>
       </a>
     </div>
     {% endfor %}
@@ -46,6 +53,11 @@
 
 {% block script %}
 <script>
+  //페이지 로드 될때 date 형식 바꿔주기
+  window.onload = () => {
+    
+  };
+
   if (document.getElementById('img')) {
     document.getElementById('img').addEventListener('change', function(e) {
       const formData = new FormData();
