[UPDATE] 1.insert.html 글 작성, 2. page.js 해시태그 관련해서 일부 수정, 3.post.js db에 insert할 값 추가 및 수정

--- a/public/main.css
+++ b/public/main.css
@@ -173,6 +173,17 @@ footer { text-align: center; }
   height: 50%; */
   object-fit: cover;
 }
+.hashtagClick{
+  display:flex;
+  list-style:none;
+}
+.hashtagClick div{
+  margin-right:10px;
+}
+.hashtagClick > div:active{
+  background-color:#2E75B6;
+  color:white;
+}
 .firstMenu{
   width:100%;
   height:40px;
