[UPDATE]1.follow.html 화면 수정 2. 팔로우 추가, 팔로잉 삭제 기능 추가 3. layout.html user.id hidden 값으로 추가

--- a/public/main.css
+++ b/public/main.css
@@ -382,6 +382,9 @@ font-size:20px;
   color: #262626;
   font-size: 14px;
 }
+.profile-section .inline {
+  display: inline;
+}
 .pic{
   border-radius: 100%;
 }
