--- a/views/layout.html
+++ b/views/layout.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <div class="profile-wrap">
-       
+        <input id="my-id" type="hidden" value="{{user.id}}">
         <div class="profile">
           <div class="profileTitle"><a href="/"><h2>codingLounge</h2></a></div>
           <div class="firstMenu">
