--- a/views/profile.html
+++ b/views/profile.html
@@ -53,9 +53,10 @@
       {% if user.Followings %}
         {% for following in user.Followings %}
           <div class="comment-section">
+              <input type="hidden" class="user-follower" value="{{following.id}}">
               <img class="pic" src="/static/profile.jpg">
               <p>{{following.nick}}</p>
-              <button class="right btn">팔로잉</button> 
+              <button class="right btn remove-following">취소</button> 
           </div>
         {% endfor %}
       {% endif %}
@@ -76,14 +77,33 @@
       </div>
       `;
       //이벤트 추가
+      const myId = document.querySelector('#my-id');
+
       document.querySelectorAll('.remove-follow').forEach(function(tag) {
         tag.addEventListener('click', function() {
-          const myId = document.querySelector('#my-id');
           if (myId) {
             const userId = tag.parentNode.querySelector('.user-follower').value;
             if (userId !== myId.value) {
               if (confirm('팔로우를 취소하시겠습니까?')) {
                 axios.delete(`/user/${userId}/removeFollow`)
+                  .then(() => {
+                    location.reload();
+                  })
+                  .catch((err) => {
+                    console.error(err);
+                  });
+              }
+            }
+          }
+        });
+      });
+      document.querySelectorAll('.remove-following').forEach(function(tag) {
+        tag.addEventListener('click', function() {
+          if (myId) {
+            const userId = tag.parentNode.querySelector('.user-follower').value;
+            if (userId !== myId.value) {
+              if (confirm('팔로잉을 취소하시겠습니까?')) {
+                axios.delete(`/user/${userId}/removeFollowing`)
                   .then(() => {
                     location.reload();
                   })
