--- a/public/main.css
+++ b/public/main.css
@@ -463,3 +463,34 @@ pre code {
 .post-content{
   font-size: 14px;
 }
+
+.post-section {
+  display: flex;
+  align-items: center;
+  height: 40px;
+  margin: 5px 0 5px 0;
+}
+.post-section img {
+  width: 50px;
+  height: 50px;
+}
+.post-section div{
+    display: inline-block;
+    font-weight: bold; 
+    margin-right: 10px;
+}
+.post-hashtag {
+  display: inline-block;
+  padding: 0 5px;
+  margin : 5px;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: 4px;
+  background: #DEEBF7;
+  border: 1px solid silver;
+  color: #2E75B6;
+  height: 20px;
+  line-height: 20px;
+  vertical-align: top;
+  font-size: 12px;
+}
