[UPDATE] 내가 쓴 댓글, 내가 쓴 글 기능 추가, UI 수정

--- a/views/join.html
+++ b/views/join.html
@@ -12,7 +12,7 @@
         <form id="join-form" action="/auth/join" method="post">
           <div class="input-group">  
               <div class="box">
-                <div class="profile-img"><img id="main-img" src="static/profile.jpg" style="width:200%; height:auto;"></div>
+                <div class="profile-img"><img id="main-img" src="static/profile.png" style="width:200%; height:auto;"></div>
               </div>
               <label id="img-label" for="img" class>사진 업로드</label>
               <input id="img" type="file" accept="image/*">
