--- a/views/main.html
+++ b/views/main.html
@@ -28,7 +28,7 @@
       <div class="post-profile">
         <div class="profile-section">
           <div>
-            <img class="pic" src="/static/profile.jpg">
+            <img class="pic" src="/static/profile.png">
           </div>
           <div>
             <input type="hidden" value="{{post.User.id}}" class="twit-user-id">
@@ -116,7 +116,7 @@
       <div class="post-profile">
         <div class="profile-section">
           <div>
-            <img class="pic" src="/static/profile.jpg">
+            <img class="pic" src="/static/profile.png">
           </div>
           <div>
             <p>${info.UserId}</p>
