--- a/views/post.html
+++ b/views/post.html
@@ -8,7 +8,7 @@
       <div id="post-form">
         <a>
           <div class="profile-section">
-            <img class="pic" src="/static/profile.jpg">
+            <img class="pic" src="/static/profile.png">
             <p>{{post.UserId}}</p>
           </div>
         </a>
@@ -44,7 +44,7 @@
         <input type="hidden" name="postId" value="{{post.id}}">
         <!-- <div>{{post.id}}</div> -->
         <div class="comment-section">
-            <img class="pic" src="/static/profile.jpg">
+            <img class="pic" src="/static/profile.png">
             <p>{{user.id}}</p> 
         </div>
         <div class="input-group">
@@ -59,7 +59,7 @@
       <div class="twit">
         <div class="input-group">
         <div class="comment-section">
-            <img class="pic" src="/static/profile.jpg">
+            <img class="pic" src="/static/profile.png">
             <p>{{c.commenter}}</p>
         </div>
         <hr>
