--- a/public/main.css
+++ b/public/main.css
@@ -299,7 +299,7 @@ font-size:20px;
   border-radius:100px;
   margin:15px;
   margin-left:20px;
- background-color:red;
+ background-color:black;
 }
 #displayInfo{
   width:550px;
@@ -472,10 +472,6 @@ pre code {
   align-items: center;
   height: 40px;
   margin: 5px 0 5px 0;
-}
-.post-section img {
-  width: 50px;
-  height: 50px;
 }
 .post-section div{
     display: inline-block;
