--- a/public/profile.css
+++ b/public/profile.css
@@ -114,7 +114,7 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
 .profilePic{
     width:150px;
     height:100%;
-    background-color:red;
+    background-color:black;
 }
 .user-name-container{ 
     width:250px;
@@ -144,7 +144,7 @@ input[type='text'], input[type='email'], input[type='password'], textarea {
   float: left;
   cursor: pointer;
   border-radius: 4px;
-  border: 1px solid crimson;
+  border: 1px solid black;
   padding: 0 10px;
   color: white;
   font-size: 12px;
