--- a/views/follow.html
+++ b/views/follow.html
@@ -12,7 +12,7 @@
       <div class="post-profile">
         <div class="profile-section">
           <div class="">
-            <img class="pic" src="/static/profile.jpg">
+            <img class="pic" src="/static/profile.png">
           </div>
           <div>
             <p>{{post.UserId}}</p>
