--- a/views/insert.html
+++ b/views/insert.html
@@ -19,7 +19,7 @@
           </div>
           <div class="input-group">  
             <div class="box">
-              <div class="profile-img"><img id="post-img" src="static/profile.jpg" style="width:200%; height:auto;"></div>
+              <div class="profile-img"><img id="post-img" src="static/profile.png" style="width:200%; height:auto;"></div>
             </div>
             <label id="postImg-label" for="postImg">사진 업로드</label>
             <input id="postImg" type="file" accept="image/*">
