--- a/views/profileupdate.html
+++ b/views/profileupdate.html
@@ -8,7 +8,7 @@
         <div class="input-group">  
             <!-- src user 프로필이미지 가져옴 -->
             <div class="box">
-              <div class="profile-img"><img id="main-img" src="static/profile.jpg" style="width:200%; height:auto;"></div>
+              <div class="profile-img"><img id="main-img" src="static/profile.png" style="width:200%; height:auto;"></div>
             </div>
             <label id="img-label" for="img" class>사진 업로드</label>
             <input id="img" type="file" accept="image/*">
