--- a/views/main.html
+++ b/views/main.html
@@ -48,8 +48,8 @@
       <div class="post-info">
         <div class="twit-author">#{{post.id}}</div>
         <div class="twit-tags">
-          {% for oneposthashtag in posthashtag %} 
-          {% for onehashtag in hashtags %}
+          {% for oneposthashtag in postHashtag %} 
+          {% for onehashtag in hashtag %}
             {% if post.id==oneposthashtag.PostId and oneposthashtag.HashtagId==onehashtag.id %}              
                 <div class="hashtag-item">{{onehashtag.title}}</div> 
             {% endif %}
